# amsel_chess_rust

./: .gitignore  Cargo.toml  README.md  magics.rs
engine/: Cargo.toml
engine/src/: evaluation.rs  game.rs  lib.rs  magics.rs  main.rs  movegen.rs  multithread_negamax.rs  negamax.rs
precompute/: Cargo.toml
precompute/src/: lib.rs  magics.rs  main.rs  populate_move_table.rs  precompute_magics.rs
src/: bitboard.rs  game.rs  lib.rs  main.rs  piece.rs  position.rs  precompute.rs  state.rs
types/src/: bitboard.rs  lib.rs  position.rs  square.rs  state.rs
