[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
precompute = { path = "../precompute" }
rand = "0.8.5"
indicatif = "0.17.8"

[[bin]]
name = "engine"
path = "./src/main.rs"

[profile.release]
debug = true
